# snakemake_executor_donau

./: README.md  pyproject.toml
Test/: snakefile
docs/: README_zh.md
snakemake_executor_donau/: __init__.py  executor.py  logging.py
snakemake_executor_plugin_donau/: __init__.py  executor.py  logging.py
