[tool.poetry]
name = "snakemake-executor-plugin-donau"
version = "0.1.0"
description = "A Snakemake executor plugin for Huawei Donau scheduler"
authors = [
    "Jian Zhang <your_email@example.com>",
]
readme = "README.md"
license = "MIT"
keywords = ["snakemake", "plugin", "executor", "cluster", "donau"]

[tool.poetry.dependencies]
python = "^3.8"
snakemake = "^9.0.0"
snakemake-interface-common = "^1.17.1"
snakemake-interface-executor-plugins = "^9.0.0"
loguru = "^0.7.0"

[tool.poetry.plugins."snakemake.executors"]
donau = "snakemake_executor_plugin_donau:Executor"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
